--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 3px;
-  border-radius: 10px;
+  width: 0px;
+  border-radius: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: #d5d5d5;
+  border-radius: 0px;
+  background: transparent;
 }
